# ekaizen-factory-game-tycoon

./: .dockerignore  .gitignore  AGENTS.md  README.md  architecture.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py  persistence.py
backend/app/api/: command_dispatcher.py  hall.py  schemas.py  security.py  serialization.py
backend/app/domain/: commands.py  engine.py  game_factory.py  models.py  sprint_processor.py
backend/app/domain/rules/: __init__.py  andon.py  events.py  flow.py  kaizen.py  metrics.py  verdict.py  work.py
backend/scripts/: balance_simulation.py
backend/tests/: conftest.py  test_api.py  test_api_helpers.py  test_domain_engine.py
deploy/: VPS_DEPLOY.md
deploy/nginx/: factory-game-tycoon.duckdns.org.conf
docs/: BALANCING.md  DELIVERY_REQUIREMENTS.md  TEST_AUDIT.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: factory-game.spec.ts
frontend/scripts/: start-backend-e2e.mjs
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  style.css  types.ts
frontend/src/components/: DevelopersPanel.tsx  HallPanel.tsx  HiringPanel.tsx  KaizenPanel.tsx  KanbanBoard.tsx  Kpi.tsx  OnboardingPanel.tsx  PanelTitle.tsx  SidePanels.tsx  TopBar.tsx
frontend/src/components/ui/: AccessibleDetail.tsx  Button.tsx  Tooltip.tsx
frontend/src/lib/: formatters.ts  gameLabels.ts
frontend/src/mocks/: mockApi.ts  mockData.ts
