[project]
name = "ekaizen-factory-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=app.domain --cov-report=term-missing --cov-fail-under=70"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

